--- a/.github/workflows/container-builld-push.yaml
+++ b/.github/workflows/container-builld-push.yaml
@@ -21,9 +21,9 @@ jobs:
       - name: Build web container image
         run: |
           docker build -f Dockerfile \
-            -t jmitchel3/tf-python:latest \
-            -t jmitchel3/f-python:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
+            -t dgoldsmith/tf-python-session-1:latest \
+            -t dgoldsmith/f-python-session-1:${GITHUB_SHA::7}-${GITHUB_RUN_ID::5} \
             .
        - name: Push container
          run: |
-           docker push jmitchel3/tf-python --all-tags
+           docker push dgoldsmith/tf-python-session-1 --all-tags
